<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Edit.Fragment.EditPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/topic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="18dp"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_textOfTitle"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_btn_addPost"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/shape_post_button"
                android:enabled="false"
                android:text="@string/record"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

    </ScrollView>
</FrameLayout>