<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.AddPostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/topic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="18dp"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textOfTitle"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/add_img"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/AddPost_btn_img"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/add"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:foreground="@drawable/image_shape_loader"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="30dp"
                android:layout_height="200dp">
                <ImageView
                    android:id="@+id/image_loader"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_addPost"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/shape_post_button"
                    android:enabled="false"
                    android:text="@string/record"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


        </LinearLayout>

    </ScrollView>

</FrameLayout>